# python-universalprocessnotation

./: LICENSE  pyproject.toml  requirements.txt
src/: test.py
src/universalprocessnotation/: __init__.py  block.py  process.py  util.py
tests/: test_block.py  test_process.py
