[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "universalprocessnotation"
version = "0.0.1"
authors = [
  { name="Artem Dontsov", email="artem@dontsoft.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dontsoft/python-universalprocessnotation"
Issues = "https://github.com/dontsoft/python-universalprocessnotation/issues"